[feature] 모먼트 결과 내 뒤로가기 시 상세 화면 이동하도록 추가 개발

--- a/app/src/main/res/navigation/moment_graph.xml
+++ b/app/src/main/res/navigation/moment_graph.xml
@@ -226,6 +226,11 @@
         <argument
             android:name="enterType"
             app:argType="kr.co.rolling.moment.library.data.MomentResultType" />
+        <action
+            android:id="@+id/action_MomentResultFragment_to_MomentDetailFragment"
+            app:popUpTo="@id/MomentResultFragment"
+            app:popUpToInclusive="true"
+            app:destination="@id/MomentDetailFragment" />
     </fragment>
 
     <dialog
