--- a/app/src/main/res/layout/bottom_sheet_trace_more.xml
+++ b/app/src/main/res/layout/bottom_sheet_trace_more.xml
@@ -20,4 +20,28 @@
         android:textColor="@color/C171719"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvDelete"
+        style="@style/L116Bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingVertical="16dp"
+        android:text="@string/moment_delete"
+        android:textAlignment="center"
+        android:textColor="@color/C171719"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvEdit"
+        style="@style/L116Bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingVertical="16dp"
+        android:text="@string/moment_edit"
+        android:textAlignment="center"
+        android:textColor="@color/C171719"
+        app:layout_constraintTop_toBottomOf="@id/tvDelete"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
