--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -34,11 +34,11 @@
         app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutUpdateInfo"
+        android:id="@+id/layoutUpdate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:background="@color/CF6F6F6"
+        android:background="@drawable/shape_8_f6f6f6"
         android:padding="16dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +54,16 @@
             android:textColor="@color/C4C4C4C"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/rvUpdateInfo"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tvUpdateInfo"
+            android:layout_marginTop="4dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -65,6 +75,6 @@
         android:background="@drawable/shape_6_000000"
         android:text="@string/update_button"
         android:textColor="@color/CFFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/layoutUpdateInfo" />
+        app:layout_constraintTop_toBottomOf="@id/layoutUpdate" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
