--- a/app/src/main/res/layout/item_trace_emoji.xml
+++ b/app/src/main/res/layout/item_trace_emoji.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shape_6_f6f6f6"
+    android:layout_height="37dp"
+    android:paddingVertical="10dp"
     android:paddingHorizontal="16dp"
-    android:paddingVertical="10dp">
+    android:background="@drawable/shape_6_f6f6f6"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/tvEmoji"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/L414Medium"
+        android:textColor="@color/C333333"
         android:includeFontPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="ദ്ദി◍•ᴗ•◍)" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="ദ്ദി◍•ᴗ•◍)"
+        android:id="@+id/tvEmoji"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
