--- a/app/src/main/res/layout/item_trace_emoji.xml
+++ b/app/src/main/res/layout/item_trace_emoji.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="37dp"
-    android:paddingVertical="10dp"
-    android:paddingHorizontal="16dp"
-    android:background="@drawable/shape_6_f6f6f6"
+    android:layout_height="wrap_content"
+    android:maxHeight="45dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:paddingVertical="10dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingHorizontal="16dp"
+        android:gravity="center"
+        android:background="@drawable/shape_6_f6f6f6"
         style="@style/L414Medium"
         android:textColor="@color/C333333"
         android:includeFontPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         tools:text="ദ്ദി◍•ᴗ•◍)"
         android:id="@+id/tvEmoji"/>
 
