--- a/app/src/main/res/layout/fragment_moment_create.xml
+++ b/app/src/main/res/layout/fragment_moment_create.xml
@@ -219,20 +219,74 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:textColor="@color/C7F7F7F"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/etMemo"
                 app:layout_constraintTop_toBottomOf="@id/etMemo"
                 tools:text="1/500" />
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/CF6F6F6"
+                app:layout_constraintTop_toBottomOf="@id/tvMemoCount"
+                android:layout_marginTop="40dp"
+                android:id="@+id/viewDividerSecret"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="16dp"
+                android:id="@+id/layoutSecret"
+                app:layout_constraintTop_toBottomOf="@id/viewDividerSecret">
+
+                <TextView
+                    android:id="@+id/tvSecretTitle"
+                    style="@style/L314Bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/moment_create_secret_title"
+                    android:textColor="@color/C4C4C4C"
+                    app:layout_constraintBottom_toTopOf="@id/tvSecretContent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed" />
+
+                <TextView
+                    android:id="@+id/tvSecretContent"
+                    style="@style/L911Medium"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="3dp"
+                    android:text="@string/moment_create_secret_content"
+                    android:textColor="@color/C7F7F7F"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvSecretTitle" />
+
+                <CheckBox
+                    android:id="@+id/cbSecret"
+                    android:layout_width="48dp"
+                    android:layout_height="28dp"
+                    android:background="@drawable/selector_common_checkbox"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/CF6F6F6"
+                app:layout_constraintTop_toBottomOf="@id/layoutSecret"
+                android:id="@+id/viewDividerPrivate"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
-                android:background="@color/CFAFAFA"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="16dp"
                 android:id="@+id/layoutPrivate"
-                app:layout_constraintTop_toBottomOf="@id/tvMemoCount">
+                app:layout_constraintTop_toBottomOf="@id/viewDividerPrivate">
 
                 <TextView
                     android:id="@+id/tvPrivateTitle"
