[feature] 회원 정보 수정 기능 개발

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -19,6 +19,6 @@
     <fragment
         android:id="@+id/MyInfoFragment"
         android:name="kr.co.rolling.moment.feature.main.MyInfoFragment"
-        tools:layout="@layout/fragment_my_info" />
-
+        tools:layout="@layout/fragment_my_info" >
+    </fragment>
 </navigation>
