--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -39,6 +39,14 @@
             app:layout_constraintTop_toBottomOf="@id/tvNickName"
             tools:text="tomato@naver.com" />
 
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_chevron_right_gray"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
