- 이메일 수정 불가능 하도록 개선

--- a/app/src/main/res/layout/fragment_info_edit.xml
+++ b/app/src/main/res/layout/fragment_info_edit.xml
@@ -84,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="40dp"
+        app:isDisable="true"
         app:errorMessage="@string/email_error"
         app:helperText="@string/email"
         app:hintText="@string/email_hint"
