--- a/app/src/main/res/values/attributes.xml
+++ b/app/src/main/res/values/attributes.xml
@@ -13,6 +13,7 @@
         <attr name="isVisibleMaxLength" format="boolean"/>
         <attr name="isClickable" format="boolean"/>
         <attr name="iconDrawable" format="reference" />
+        <attr name="isDisable" format="boolean"/>
 
         <attr name="inputTypes" format="enum">
             <enum name="text" value="0" />
